base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-universal
spec:
  replicas: 1 # Padrão conservador
  selector:
    matchLabels:
      app: app-universal
  template:
    metadata:
      labels:
        app: app-universal
    spec:
      containers:
      - name: python-app
        image: mateusr1/meu-app:v3 
        ports:
        - containerPort: 8080
        resources: # Regras de Governança (Ninguém sobe app sem limite!)
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "200m"
            memory: "128Mi"
