base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    # Garante que o tráfego chegue na raiz do seu Flask
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dsv.meuapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-universal-service
            port:
              number: 80
  - host: hmo.meuapp.local # ADICIONADO AQUI
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-universal-service
            port:
              number: 80
  - host: prd.meuapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-universal-service
            port:
              number: 80
